--- a/src/components/VerticalHeading/VerticalHeading.scss
+++ b/src/components/VerticalHeading/VerticalHeading.scss
@@ -22,5 +22,6 @@
   .VerticalHeading--Character {
     display: block;
     padding: #{$spacing * 0.1} 0;
+    line-height: 2.2rem;
   }
 }
